<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_map_view">Map View</string>
    <string name="title_list_view">List View</string>
    <string name="title_workmates">Workmates</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Go4Lunch</string>
    <string name="nav_profile_name" translatable="false">John SMITH</string>
    <string name="nav_profile_mail" translatable="false">jsmith.1337@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chosen">%s has chosen:  %s</string>
    <string name="not_chosen">%s hasn\'t chosen yet</string>
    <string name="joining">%s eats here!</string>
    <string name="open">Open %sH%s</string>
    <string name="close">Close %sH%s</string>
    <string name="unknown_schedule">Unknown schedule</string>

    <string name="facebook_application_id" translatable="false">187118033500985</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb187118033500985</string>

    <string name="menu_your_lunch">YOUR LUNCH</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="title_activity_restaurant" translatable="false">ScrollingActivity</string>

    <string name="button_update_account">Update</string>
    <string name="button_delete_account">Delete my account</string>
    <string name="button_sign_out_account">Loggout</string>
    <string name="info_no_email_found">No email</string>
    <string name="info_no_username_found">No user\'s name</string>
    <string name="info_no_useravatar_found">No avatar defined</string>
    <string name="username_updated">User\'s name updated !</string>
    <string name="useravatar_updated">User\'s avatar updated !</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_yes">Yes !</string>
    <string name="popup_message_choice_no">No</string>
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>
    <string name="text_view_email">E-mail address: </string>

    <string name="unknown_error">Unknown error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="play_services_update_cancelled">Play Services update cancelled</string>
    <string name="developer_error">Developer error</string>
    <string name="provider_error">Provider error</string>
    <string name="user_account_merge_conflict">User account merge conflict</string>
    <string name="attempting_to_sign_in_different_email">You are attempting to sign in a different email than previously provided</string>
    <string name="attempting_to_sign_with_an_invalid_email_link">You are attempting to sign in with an invalid email link</string>
    <string name="please_enter_your_email_to_continue_signing_in">Please enter your email to continue signing in</string>
    <string name="you_must_open_the_email_link_on_the_same_device">You must open the email link on the same device.</string>
    <string name="you_must_determine_if_you_want_continue_linking_or_complete_the_sign_in">You must determine if you want to continue linking or complete the sign in</string>
    <string name="the_session_associated_with_this_sign_in_request_has_either_expired_or_was_cleared">The session associated with this sign-in request has either expired or was cleared</string>
    <string name="the_user_account_has_been_disabled_by_an_administrator">The user account has been disabled by an administrator.</string>
    <string name="generic_idp_recoverable_error">Generic IDP recoverable error.</string>
    <string name="unknown_code">Unknown code: </string>

    <string name="choice">You chose: </string>
    <string name="join">You will be joined by: </string>

    <string name="profile_picture_restaurant">Profile Picture Restaurant </string>
    <string name="backgroundOrange">BackgroundOrange </string>
    <string name="call">Call </string>
    <string name="like">Like </string>
    <string name="website">Website </string>
    <string name="notifications">Notifications </string>
    <string name="background_settings">Background settings </string>
    <string name="avatar_settings">Avatar settings </string>
    <string name="autocomplete_background" translatable="false">Autocomplete Background </string>
    <string name="avatar_workmate" translatable="false">Avatar Workmate </string>
    <string name="avatar_listview" translatable="false">Avatar Listview </string>
    <string name="logo_workmate" translatable="false">Logo Workmate </string>
    <string name="one_star_full" translatable="false">First Star Full </string>
    <string name="one_star_empty" translatable="false">First Star Empty </string>
    <string name="two_star_full" translatable="false">Second Star Full </string>
    <string name="two_star_empty" translatable="false">Second Star Empty </string>
    <string name="three_star_full" translatable="false">Third Star Full </string>
    <string name="three_star_empty" translatable="false">Third Star Empty </string>



    <string-array name="tri_spinner">
        <item>Trier par</item>
        <item>Trier par distance</item>
        <item>Trier par étoiles</item>
        <item>Trier par collègues</item>
    </string-array>
</resources>