<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_mobile_navigation"
    app:startDestination="@+id/navigation_map_view">

    <fragment
        android:id="@+id/navigation_map_view"
        android:name="com.maxime.go4launch.ui.mapview.MapViewFragment"
        android:label="@string/title_map_view"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/navigation_list_view"
        android:name="com.maxime.go4launch.ui.listview.ListViewFragment"
        android:label="@string/title_list_view"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.maxime.go4launch.ui.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_workmates" />
</navigation>