<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_email"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_update"
        app:layout_constraintEnd_toStartOf="@id/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_update"
        app:layout_constraintStart_toEndOf="@id/title_mail"
        app:layout_constraintTop_toBottomOf="@id/name"/>


    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_account"
        android:textColor="#fff"
        android:textSize="@dimen/default_text_size"
        android:background="@drawable/button_radius_primary_color"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/button_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- BUTTON SIGN OUT -->
    <Button
        android:id="@+id/button_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_out_account"
        android:textColor="#fff"
        android:textSize="@dimen/default_text_size"
        android:background="@drawable/button_radius_accent_color"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_update"/>

    <!-- BUTTON DELETE ACCOUNT -->
    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_account"
        android:textColor="#fff"
        android:textSize="@dimen/default_text_size"
        android:background="@drawable/button_radius_error_color"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_out"/>
</androidx.constraintlayout.widget.ConstraintLayout>